= Release notes v.7.9

== Table of Contents

* Supported Funds Confirmation Consent in Decoupled approach with multilevel sca
* Fixed incorrect saving of owner_name_type and trusted_beneficiaries_type in consent table for piis consent

== Supported Funds Confirmation Consent in Decoupled approach with multilevel sca

From now on, funds confirmation consent decoupled flow is supported by xs2a.

== Fixed incorrect saving of owner_name_type and trusted_beneficiaries_type in consent table for piis consent

From now on, piis consent is saving with correct 'NONE' value of owner_name_type and trusted_beneficiaries_type
columns in consent table. All old incorrect 'ALL_AVAILABLE_ACCOUNTS' value were replaced with 'NONE'.