@@ -47,6 +47,7 @@ public class SpiContextDataProvider {
         SpiPsuData spiPsuData = psuDataMapper.mapToSpiPsuData(psuIdData);
         return new SpiContextData(spiPsuData, tppInfo, requestProviderService.getRequestId(),
                                   requestProviderService.getInternalRequestId(), requestProviderService.getOAuth2Token(),
-                                  requestProviderService.getTppBrandLoggingInformationHeader());
+                                  requestProviderService.getTppBrandLoggingInformationHeader(),
+                                  requestProviderService.getTppRejectionNoFundsPreferred());
     }
 }
