@@ -42,6 +42,7 @@ public class TestSpiDataProvider {
     private static final String PSU_HTTP_METHOD = "psuHttpMethod";
     private static final UUID PSU_DEVICE_ID = UUID.randomUUID();
     private static final String TPP_BRAND_LOGGING_INFORMATION = "tppBrandLoggingInformation";
+    private static final Boolean TPP_REJECTION_NO_FUNDS_PREFFERED = true;
 
     public static SpiContextData getSpiContextData() {
         return new SpiContextData(
@@ -64,16 +65,16 @@ public class TestSpiDataProvider {
             X_REQUEST_ID,
             INTERNAL_REQUEST_ID,
             AUTHORISATION,
-            TPP_BRAND_LOGGING_INFORMATION
+            TPP_BRAND_LOGGING_INFORMATION,
+            TPP_REJECTION_NO_FUNDS_PREFFERED
         );
     }
 
     public static SpiContextData defaultSpiContextData() {
-        return new SpiContextData(null, null, null, null, null, null);
+        return new SpiContextData(null, null, null, null, null, null, null);
     }
 
     public static SpiContextData buildWithPsuTppAuthToken(SpiPsuData psuData, TppInfo tppInfo, String oAuth2Token) {
-        return new SpiContextData(psuData, tppInfo, X_REQUEST_ID, INTERNAL_REQUEST_ID, oAuth2Token, TPP_BRAND_LOGGING_INFORMATION);
+        return new SpiContextData(psuData, tppInfo, X_REQUEST_ID, INTERNAL_REQUEST_ID, oAuth2Token, TPP_BRAND_LOGGING_INFORMATION, null);
     }
-
 }
